# nix-conf

./: README.adoc  flake.nix
auto/: .gitignore  Cargo.toml  README.adoc  bootstrap.swift
auto/src/: nix-darwin.rs  test.rs
auto/src/mods/: mod.rs  nix.rs  os.rs
hosts/: HISTORY.adoc  laptop-x86.nix  mac-vm.nix  macbook.nix  macmini.nix  vm-aarch64.nix  vm-x86.nix
hosts/hardware/: laptop-x86.nix  mainpc-x86.nix  vm-aarch64.nix  vm-x86.nix
