[[bin]]
name = "bootstrap-darwin"
path = "src/nix-darwin.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
colored = "3.0.0"
plist = "1.7.4"
whoami = "1.6.1"

[package]
name = "invra-nix-automation"
version = "1.0.0"
edition = "2024"
authors = ["Invra"]

[target.'cfg(target_os="macos")'.dependencies]
clap = {version = "4.5.41", features = ["derive"]}
os_info = "3.12.0"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
